add language selector:

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,7 @@
 {
   "title": "todos",
-  "placeholder": "What needs to be done?"
+  "placeholder": "What needs to be done?",
+  "dashboard" : {
+    "budget": "Budget-en"
+  }
 }
