--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -1,4 +1,7 @@
 {
   "title": "todos",
-  "placeholder": "Was muss getan werden?"
+  "placeholder": "What needs to be done?",
+  "dashboard" : {
+    "budget": "Budget-de"
+  }
 }
